chore: address more comments