@@ -48,9 +48,9 @@ import ai.timefold.solver.core.testdomain.pinned.unassignedvar.TestdataPinnedAll
 import ai.timefold.solver.core.testdomain.unassignedvar.TestdataAllowsUnassignedEasyScoreCalculator;
 import ai.timefold.solver.core.testdomain.unassignedvar.TestdataAllowsUnassignedEntity;
 import ai.timefold.solver.core.testdomain.unassignedvar.TestdataAllowsUnassignedSolution;
-import ai.timefold.solver.core.testdomain.valuerange.entityproviding.TestdataEntityProvidingEntity;
-import ai.timefold.solver.core.testdomain.valuerange.entityproviding.TestdataEntityProvidingScoreCalculator;
-import ai.timefold.solver.core.testdomain.valuerange.entityproviding.TestdataEntityProvidingSolution;
+import ai.timefold.solver.core.testdomain.valuerange.entityproviding.unassignedvar.TestdataAllowsUnassignedEntityProvidingEntity;
+import ai.timefold.solver.core.testdomain.valuerange.entityproviding.unassignedvar.TestdataAllowsUnassignedEntityProvidingScoreCalculator;
+import ai.timefold.solver.core.testdomain.valuerange.entityproviding.unassignedvar.TestdataAllowsUnassignedEntityProvidingSolution;
 import ai.timefold.solver.core.testutil.AbstractMeterTest;
 import ai.timefold.solver.core.testutil.PlannerTestUtils;
 
@@ -342,23 +342,25 @@ class DefaultConstructionHeuristicPhaseTest extends AbstractMeterTest {
     @Test
     void solveWithEntityValueRangeBasicVariable() {
         var solverConfig = PlannerTestUtils
-                .buildSolverConfig(TestdataEntityProvidingSolution.class, TestdataEntityProvidingEntity.class)
-                .withEasyScoreCalculatorClass(TestdataEntityProvidingScoreCalculator.class)
+                .buildSolverConfig(TestdataAllowsUnassignedEntityProvidingSolution.class,
+                        TestdataAllowsUnassignedEntityProvidingEntity.class)
+                .withEasyScoreCalculatorClass(TestdataAllowsUnassignedEntityProvidingScoreCalculator.class)
                 .withPhases(new ConstructionHeuristicPhaseConfig());
 
         var value1 = new TestdataValue("v1");
         var value2 = new TestdataValue("v2");
-        var entity1 = new TestdataEntityProvidingEntity("e1", List.of(value1, value2));
-        var entity2 = new TestdataEntityProvidingEntity("e2", Collections.emptyList());
+        var value3 = new TestdataValue("v3");
+        var entity1 = new TestdataAllowsUnassignedEntityProvidingEntity("e1", List.of(value1, value2));
+        var entity2 = new TestdataAllowsUnassignedEntityProvidingEntity("e2", List.of(value3));
 
-        var solution = new TestdataEntityProvidingSolution();
+        var solution = new TestdataAllowsUnassignedEntityProvidingSolution();
         solution.setEntityList(List.of(entity1, entity2));
 
         var bestSolution = PlannerTestUtils.solve(solverConfig, solution, true);
         assertThat(bestSolution).isNotNull();
         // Only one entity should provide the value list and assign the values.
         assertThat(bestSolution.getEntityList().get(0).getValue()).isNotNull();
-        assertThat(bestSolution.getEntityList().get(1).getValue()).isNull();
+        assertThat(bestSolution.getEntityList().get(1).getValue()).isSameAs(value3);
     }
 
     @Disabled("Temporarily disabled")
